--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,21 @@ artifactory {
         }
     }
 }
-
+buildscript {
+   repositories {
+     jcenter()
+   }
+   dependencies {
+     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.0"
+   }
+}
+apply plugin: "com.jfrog.artifactory"
 repositories {
   mavenCentral()
 }
 
 dependencies {
   implementation 'com.google.guava:guava:29.0-jre'
-  classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
