--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ apply plugin: "com.jfrog.artifactory"
 
 
 group = 'com.github.jitpack'
+version = '1.0.0'
 
 sourceCompatibility = 1.8 // java 8
 targetCompatibility = 1.8
